update links for single file

--- a/StephensonCem/StephensonCemeteryMap.htm
+++ b/StephensonCem/StephensonCemeteryMap.htm
@@ -12,7 +12,7 @@
 <P align=center><font size="2" color="#000080"><b><font face="Comic Sans MS">STEPHENSON CEMETERY, (old) 
 North Port Royal Rd, MAURY COUNTY TENNESSEE<br>
 </font></b></font><B><FONT face="Comic Sans MS" color=#800000 size=2>
-<img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/StephensonCemGPSFixed.jpg" width="1395" height="870"><br>
+<img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/StephensonCem/StephensonCemGPSFixed.jpg" width="1395" height="870"><br>
 </FONT></B><font size="2" face="Comic Sans MS"><b>&nbsp;From I-65, Exit 53 going west on Saturn Parkway 
 toward Spring Hill take the first exit to the right which is Port Royal Road Exit and go 
 north (or right) about 2 tenths of a mile and turn right on Old Port Royal Road 
@@ -26,15 +26,15 @@ still maintained. Park and walk west but veer toward the south until you
 are behind the third building &amp; you will see the cemetery across a line 
 of trees and in a stand of trees southeast of you. The stones are tiny and so many 
 of them are fallen the cemetery is not highly visible.</b></font><B><FONT face="Comic Sans MS" color=#800000 size=2><br>
-<img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/StephensonCemRdCorrected.jpg" width="1600" height="803"><br>
+<img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/StephensonCem/StephensonCemRdCorrected.jpg" width="1600" height="803"><br>
 </FONT></B><FONT 
 face="Comic Sans MS" color=#000080 size=2><B 
 style="mso-bidi-font-weight: normal">The Old Port Royal Road does not go under 
 the Saturn Parkway as shown above, but dead ends today.<br>
-<img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/StephensonCemAerialFixed.jpg" width="1607" height="804"><br>
+<img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/StephensonCem/StephensonCemAerialFixed.jpg" width="1607" height="804"><br>
 The red check points out the location of the cemetery. Here you can see the 
 exits of Saturn parkway and the three businesses along N. Old Port Royal Rd.<br>
-<img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/StephensonCemGoogleFixed.jpg" width="1608" height="726"><br>
+<img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/StephensonCem/StephensonCemGoogleFixed.jpg" width="1608" height="726"><br>
 Here we have a better image of the location of the cemetery under the tall trees marked with a red check. 
 It is past the first line of trees into a round clump of trees. Today there are 
 only three trees in that clump.<br>
@@ -46,7 +46,7 @@ exact location.<br>
 </B></i></FONT>
 <font face="Comic Sans MS">
 <a href="StephensonCemetery.htm">
-<img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/../buttontornad.jpg" width="105" height="54"></a></font></P>
+<img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/StephensonCem/../buttontornad.jpg" width="105" height="54"></a></font></P>
 
 </body>
 
