run image replacement script on adkison cem

--- a/AdkisonCem/Oakley01.htm
+++ b/AdkisonCem/Oakley01.htm
@@ -14,7 +14,7 @@
 
 <p align="center"><b><font color="#BB2206" face="Comic Sans MS" size="2">ADKISON
 CEMETERY,&nbsp;SANTA FE, (West) MAURY COUNTY TENNESSEE<br>
-</font><font color="#000080" face="Comic Sans MS" size="3"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/Oakley1.jpg" width="265" height="359"><Br>
+</font><font color="#000080" face="Comic Sans MS" size="3"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/Oakley1.jpg" width="265" height="359"><Br>
 </font><font color="#000080" face="Comic Sans MS" size="2"><br>
 </font><font color="#BB2206" face="Comic Sans MS" size="2">*OAKLEY, Arthur D.,&nbsp;10 Jul 1957 - 5 Nov 2003. (Maury Co. native; son of W.H. 
 and Lillie Mae Dial Oakley; hus. of Carolyn Fitzgerald Oakley; preceded in death 
@@ -46,7 +46,7 @@ Sep 2016.</font></i><font face="Comic Sans MS" size="2">
 
 </b><i><font face="Comic Sans MS"><br>
 &nbsp;</font></i><b><font color="#660033" face="Comic Sans MS" ><CENTER><font color="#000080">
-<a href="AdkisonCemList.htm"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/../buttontornad.jpg" </font width="100" height="56"></a>
+<a href="AdkisonCemList.htm"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a>
 </font>
 </CENTER>
 
