--- a/AdkisonCem/Obits05.htm
+++ b/AdkisonCem/Obits05.htm
@@ -44,7 +44,7 @@ Sep 2016.</font></i><font face="Comic Sans MS" size="2">
 <b>
 
 <font color="#000080" face="Comic Sans MS">
-<a href="AdkisonCemList.htm"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/../buttontornad.jpg" </font width="100" height="56"></a></font></b><br>
+<a href="AdkisonCemList.htm"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a></font></b><br>
 &nbsp;
 
 </body>
