--- a/AdkisonCem/Obits08.htm
+++ b/AdkisonCem/Obits08.htm
@@ -47,7 +47,7 @@ Kay&nbsp;Potts&nbsp;and Jean Hood.<br>
 &nbsp;</font><i><font face="Comic Sans MS" size="2">Added here by Wayne Austin sent in by Mary Bob McClain 
 Sep 2016.</font></i></b><b><font color="#660033" face="Comic Sans MS" ><CENTER>
 <font color="#000080">
-<a href="AdkisonCemList.htm"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/../buttontornad.jpg" </font width="100" height="56"></a>
+<a href="AdkisonCemList.htm"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a>
 </font>
 </CENTER>
 
