--- a/AdkisonCem/AdkisonCemList.htm
+++ b/AdkisonCem/AdkisonCemList.htm
@@ -461,7 +461,7 @@ This cemetery is not up to date and will not until it is photographed W.A.</font
 
 <font color="#660033" face="Comic Sans MS" >
 <CENTER><font color="#000080" size="2">
-<a href="../index.html"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/../buttontornad.jpg" </font width="100" height="56"></a>
+<a href="../index.html"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a>
 </font>
 </CENTER>
 
