--- a/AdkisonCem/AdkisonCemMap.htm
+++ b/AdkisonCem/AdkisonCemMap.htm
@@ -14,7 +14,7 @@
 
 <p align="center"><b><font color="#000080" face="Comic Sans MS" size="2">ADKISON
 CEMETERY,&nbsp;SANTA FE, (West) MAURY COUNTY TENNESSEE<br>
-<img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonRoad.jpg" width="399" height="393"><br>
+<img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/AdkisonRoad.jpg" width="399" height="393"><br>
 </font></b><font color="#000080" face="Comic Sans MS" size="2"><b>Mr Fred's
 instructions of 1987: From Hilltown go east (or right) on Chestnut Ridge Rd for
 1 &amp; 1/4 miles and turn right (or south) on Lewis Rd. The cemetery is on the
@@ -23,8 +23,8 @@ Another set of instructions: From Santa Fe go northwest on Hwy 7 (Fly Road) for
 a short distance and turn north (right) on Lewis Road. Follow Lewis Road for
 about 2 miles and the cemetery is on your left.<br>
 </b></font><b><font color="#000080" face="Comic Sans MS" size="2">
-<img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonTopozone.jpg" width="437" height="362"><br>
-</font><font color="#000080" face="Comic Sans MS" size="3"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonAerial.jpg" width="727" height="502"><Br>
+<img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/AdkisonTopozone.jpg" width="437" height="362"><br>
+</font><font color="#000080" face="Comic Sans MS" size="3"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/AdkisonAerial.jpg" width="727" height="502"><Br>
 </font><font color="#000080" face="Comic Sans MS" size="2">With this aerial view
 one can actually see the stones populating the ground inside the decorative tree
 line. The yellow arrow points to the center of the cemetery.<br>
@@ -37,7 +37,7 @@ this cemetery location by Wayne Austin 15 Jan 2009</font></i></b><i><font face="
 
 <font color="#660033" face="Comic Sans MS" >
 <CENTER><font color="#000080">
-<a href="AdkisonCemList.htm"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/../buttontornad.jpg" </font width="100" height="56"></a>
+<a href="AdkisonCemList.htm"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a>
 </font>
 </CENTER>
 
