--- a/AdkisonCem/Ray01.htm
+++ b/AdkisonCem/Ray01.htm
@@ -53,7 +53,7 @@ young girls and boys tap, jazz, and ballet. <br>
 
 <font color="#660033" face="Comic Sans MS" >
 <CENTER><font color="#000080">
-<a href="AdkisonCemList.htm"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/../buttontornad.jpg" </font width="100" height="56"></a>
+<a href="AdkisonCemList.htm"><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/AdkisonCem/../buttontornad.jpg" </font width="100" height="56"></a>
 </font>
 </CENTER>
 
