--- a/linksindex.html
+++ b/linksindex.html
@@ -13,8 +13,7 @@
 <p align="center"><b><font color="#000080" face="Comic Sans MS" size="3">More Links for
 Cemetery Research</font><font color="#000080" face="Comic Sans MS" size="2"><br>
 </font></b><font color="#000080" face="Comic Sans MS" size="2"><br>
-</font><font face="Comic Sans MS"><b><font size="2"><font color="#000080">OFF
-SITE INFORMATON</font>
+</font><font face="Comic Sans MS"><b><font size="2"><font color="#000080">OFF SITE INFORMATON</font>
 
 <font color="#CC3300" face="Comic Sans MS">
 
