convert site admin doc into html file

--- a/index.html
+++ b/index.html
@@ -978,7 +978,7 @@
             <li><a href="updates_in_2012_by_MBMR.html">Updated postings - Southern Mid Tenn Cemeteries</a> <b>-As compiled by Mary Bob McClain Richardson</b></li>
         </ul>
         <p>If you have photos or transcribed cemetery listings from Maury, Giles, Lincoln, Marshall, Bedford or Lawrence County Tennessee that can be added to this site you may E-mail them to Wayne Austin <a
-                href="mailto:WayneAL1@AOL.com">WayneAL1@AOL.com</a> for posting here. We emphasize genealogy, cemetery preservation and history. <a href="Purpose.html">Our Purpose</a></p>
+                href="mailto:WayneAL1@AOL.com">WayneAL1@AOL.com</a> for posting here. We emphasize genealogy, cemetery preservation and history. <a href="purpose.html">Our Purpose</a></p>
         <ul>
             <li><a href="MauryMap.html">Map of Maury County Cemeteries - 388 cemeteries per USGS</a></li>
             <li><a href="Warriors.html">Revolutionary War Soldiers buried in Maury County</a></li>
