replace all links to parent giles directory to within root directory

--- a/bedford.html
+++ b/bedford.html
@@ -15,31 +15,31 @@
 
         <p class="red-heading">BEDFORD COUNTY TENNESSEE CEMETERIES:</p>
         <ul>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/Barrett-CarlisleCemBedfordCo/Barrett-CarlisleListing.html">Barrett-Carlisle Cemetery</a> (Complete w/listings &amp; photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/BooneCemBedfordCo/BooneCemeteryListing.html">Boone Family Cemetery</a> (Complete w/listings by David Lacy)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/CenterChurchCemBedfordCo/CenterChurchCemeteryListing.html"> Center Church Cemetery</a> (Complete w/210+ listings &amp; 250+ Photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/CoffeyCemBedfordCoTn/Coffey(Rice)CemListing.html">Coffey (Rice) Cemetery</a> (Complete w/15+ listings &amp; 30+ Photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/OldCityCem-CowanShelbyvilleTN/OldCityCemMenu.html">Cowan Cemetery</a> (Shelbyville, Complete w/many listings &amp; Photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/CraneCemBedfordCo/CraneCemListing.html">Crane Cemetery</a> (1 listing &amp; Photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/Dyer_aka_BigSpringChrist.ChCemBedfordCo/DyerCemListing.html"> Dyer aka Big Springs Christ. Ch Cemetery</a> (listings &amp; some Photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/FlatCreek(old)BedfordCo/FlatCreek(Old)CemListing.html">Flat Creek (Old) Cemetery</a> (Flat Creek, listings and photos, complete survey)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/GillCemBedfordCo/GillCemListing.html">Gill Family Cemetery</a> (Complete w/listings &amp; Photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/HastingsCemBedfordCo/HastingsCemListing.html"> Hastings Family Cemetery</a> (Complete w/listings &amp; Photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/HixCemBedfordCo/HixCemeteryListing.html">Hix Family Cemetery</a> (listings and photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/MtHermon(New)CemBedfordCo/Mt.HermonCem(New)Listing.html">Mt. Hermon (New) Cemetery</a> (listings and photos- 450+ graves)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/MtHermon(Old)CemBedfordCo/Mt.HermonCemetery(Old)Listing.html">Mt. Hermon (Old) Cemetery</a> (listings and photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/NewHermonCemBedfordCo/NewHermonCemListing.html"> New Hermon Cemetery</a> (265 listings and photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/OldCityCem-CowanShelbyvilleTN/OldCityCemMenu.html">Old City Cemetery</a> (Shelbyville, Complete 300+ listings and photo)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/OldSalemCemBedfordCo/OldSalemCemListing.html">Old Salem Church Cemetery</a> (Listing and some photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/PleasantGardenCemBedfordCo/PleasantGardensCemListing.html"> Pleasant Gardens Cemetery</a> (Goose Creek, 30+ listings and 75+ photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/Parker(2)CemBedfordCo/Parker(R)CemListing.html">Parker Grave</a> (Mt Hermon Rd, 1 known grave)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/ReavesCemBedfordCo/ReavesCemListing.html"> Reaves Cemetery</a> (Listing &amp; Photos, Goose Creek)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/RichmondCemBedfordCo/RichmonCemListing.html">Richmond Cemetery</a> (Hannah Gap Rd, 300+ listings and many photos - photos incomplete)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/Parker(2)CemBedfordCo/Parker(Unknown)CemListing.html"> Unknown Cemetery</a> (Amos Gammill Rd, photos, no marked grave)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/WarnerCemBedfordCo/WarnerCemListing.html">Warner Cemetery</a> (Listing only, Warner Bridge or Fishing Ford Road)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/Wilhoite(JacobII)CemBefordCo/Willhoite(JacobII)CemListing.html">Wilhoite (Jacob II) aka Parker Cemetery</a> (Bedford County, unmarked cemetery listing &amp; photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/WilhoiteCem(Jacob)BedfordCo/Wilhoite-WhitesellCemListing.html">Wilhoite-Whitesell Cemetery</a> (Bedford County, Complete listing &amp; photos)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/WordCemBedfordCo/WordCemListing.html">Word Cemetery</a> (Amos Gammill Rd., 6 known graves photographed.) </li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/Barrett-CarlisleCemBedfordCo/Barrett-CarlisleListing.html">Barrett-Carlisle Cemetery</a> (Complete w/listings &amp; photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/BooneCemBedfordCo/BooneCemeteryListing.html">Boone Family Cemetery</a> (Complete w/listings by David Lacy)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/CenterChurchCemBedfordCo/CenterChurchCemeteryListing.html"> Center Church Cemetery</a> (Complete w/210+ listings &amp; 250+ Photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/CoffeyCemBedfordCoTn/Coffey(Rice)CemListing.html">Coffey (Rice) Cemetery</a> (Complete w/15+ listings &amp; 30+ Photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/OldCityCem-CowanShelbyvilleTN/OldCityCemMenu.html">Cowan Cemetery</a> (Shelbyville, Complete w/many listings &amp; Photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/CraneCemBedfordCo/CraneCemListing.html">Crane Cemetery</a> (1 listing &amp; Photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/Dyer_aka_BigSpringChrist.ChCemBedfordCo/DyerCemListing.html"> Dyer aka Big Springs Christ. Ch Cemetery</a> (listings &amp; some Photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/FlatCreek(old)BedfordCo/FlatCreek(Old)CemListing.html">Flat Creek (Old) Cemetery</a> (Flat Creek, listings and photos, complete survey)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/GillCemBedfordCo/GillCemListing.html">Gill Family Cemetery</a> (Complete w/listings &amp; Photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/HastingsCemBedfordCo/HastingsCemListing.html"> Hastings Family Cemetery</a> (Complete w/listings &amp; Photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/HixCemBedfordCo/HixCemeteryListing.html">Hix Family Cemetery</a> (listings and photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/MtHermon(New)CemBedfordCo/Mt.HermonCem(New)Listing.html">Mt. Hermon (New) Cemetery</a> (listings and photos- 450+ graves)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/MtHermon(Old)CemBedfordCo/Mt.HermonCemetery(Old)Listing.html">Mt. Hermon (Old) Cemetery</a> (listings and photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/NewHermonCemBedfordCo/NewHermonCemListing.html"> New Hermon Cemetery</a> (265 listings and photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/OldCityCem-CowanShelbyvilleTN/OldCityCemMenu.html">Old City Cemetery</a> (Shelbyville, Complete 300+ listings and photo)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/OldSalemCemBedfordCo/OldSalemCemListing.html">Old Salem Church Cemetery</a> (Listing and some photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/PleasantGardenCemBedfordCo/PleasantGardensCemListing.html"> Pleasant Gardens Cemetery</a> (Goose Creek, 30+ listings and 75+ photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/Parker(2)CemBedfordCo/Parker(R)CemListing.html">Parker Grave</a> (Mt Hermon Rd, 1 known grave)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/ReavesCemBedfordCo/ReavesCemListing.html"> Reaves Cemetery</a> (Listing &amp; Photos, Goose Creek)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/RichmondCemBedfordCo/RichmonCemListing.html">Richmond Cemetery</a> (Hannah Gap Rd, 300+ listings and many photos - photos incomplete)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/Parker(2)CemBedfordCo/Parker(Unknown)CemListing.html"> Unknown Cemetery</a> (Amos Gammill Rd, photos, no marked grave)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/WarnerCemBedfordCo/WarnerCemListing.html">Warner Cemetery</a> (Listing only, Warner Bridge or Fishing Ford Road)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/Wilhoite(JacobII)CemBefordCo/Willhoite(JacobII)CemListing.html">Wilhoite (Jacob II) aka Parker Cemetery</a> (Bedford County, unmarked cemetery listing &amp; photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/WilhoiteCem(Jacob)BedfordCo/Wilhoite-WhitesellCemListing.html">Wilhoite-Whitesell Cemetery</a> (Bedford County, Complete listing &amp; photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/WordCemBedfordCo/WordCemListing.html">Word Cemetery</a> (Amos Gammill Rd., 6 known graves photographed.) </li>
         </ul>
     </body>
 </html>
