--- a/coffee.html
+++ b/coffee.html
@@ -15,8 +15,8 @@
 
         <p class="red-heading">COFFEE COUNTY TENNESSEE CEMETERIES:</p>
         <ul>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/CrockettCem(SamuelJ)CoffeeCoTn/CrockettFamCemListCoffeeCo.html">Crockett (Samuel J) Family Cemetery #2</a>, (complete, photos &amp; 6 grave listings)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/CrockettCem(JohnS)CoffeeCoTn/CrockettFam(J,JS)CemListCoffeeCo.html">Crockett (John &amp; John S.) Family Cemetery #1</a>, (complete, no visit, Census analysis) FRANKLIN</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/CrockettCem(SamuelJ)CoffeeCoTn/CrockettFamCemListCoffeeCo.html">Crockett (Samuel J) Family Cemetery #2</a>, (complete, photos &amp; 6 grave listings)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/CrockettCem(JohnS)CoffeeCoTn/CrockettFam(J,JS)CemListCoffeeCo.html">Crockett (John &amp; John S.) Family Cemetery #1</a>, (complete, no visit, Census analysis) FRANKLIN</li>
         </ul>
 
     </body>
