--- a/franklin.html
+++ b/franklin.html
@@ -15,7 +15,7 @@
 
         <p class="red-heading">FRANKLIN COUNTY TENNESSEE CEMETERIES:</p>
         <ul>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/Braton-McKelvyCemFranklinCoTn/Braton-McKelvyCemListing.html">Braton-McKelvy Cemetery</a> (Several Grave Listing and photos, Decherd Tn.)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/Braton-McKelvyCemFranklinCoTn/Braton-McKelvyCemListing.html">Braton-McKelvy Cemetery</a> (Several Grave Listing and photos, Decherd Tn.)</li>
         </ul>
 
     </body>
