--- a/maury.html
+++ b/maury.html
@@ -276,7 +276,7 @@
             <li><a href="zOtherCems/PorterFamCem/PorterFamCemList.html">Porter Family Cemetery</a> (old listing - not visited)</li>
             <li><a href="KinderhookCem/Kinderhook-PottsCem.html">Potts (I) - Kinderhook Cemetery</a> (listing, no current survey)</li>
             <li><a href="zOtherCems/Potts(II)Cem/Potts(II)-TanyardCem.html">Potts (II) - Tanyard Cemetery</a> (listing, mapping, but no current survey)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/PrattCemMarshallCo/PrattCemListing.html">Pratt Family Cemetery</a> (16 listings, Ralley Hill)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/PrattCemMarshallCo/PrattCemListing.html">Pratt Family Cemetery</a> (16 listings, Ralley Hill)</li>
             <li><a href="PuckettCemetery/PuckettCemList.html">Puckett Cemetery, Smyrna Church Rd</a> (2 listings + 10 Photos, old Cemetery)</li>
             <li><a href="zOtherCems/PughCemetery/PughCemetery.html">Pugh Cemetery</a> (4 listings + 1 Photo)</li>
             <li><a href="PulliamCemetery/PulliamCem.html">Pulliam Cemetery, Porters</a> (10 + Photos, very old cemetery)</li>
