--- a/mcnairy.html
+++ b/mcnairy.html
@@ -15,7 +15,7 @@
 
         <p class="red-heading">McNAIRY COUNTY TENNESSEE CEMETERIES:</p>
         <ul>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/ClearCreekCemMcNairyCo/ClearCreekCem.html">Clear Creek (Christian Church) Cemetery</a> (Stantonville, McNairy County,200+ complete &amp; photos)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/ClearCreekCemMcNairyCo/ClearCreekCem.html">Clear Creek (Christian Church) Cemetery</a> (Stantonville, McNairy County,200+ complete &amp; photos)</li>
             <li><a href="updates_in_2012_by_MBMR.html">Updated postings - Southern Mid Tenn Cemeteries</a> <b>-As compiled by Mary Bob McClain Richardson</b></li>
         </ul>
 
