--- a/williamson.html
+++ b/williamson.html
@@ -14,9 +14,9 @@
 
         <p class="red-heading">WILLIAMSON COUNTY TENNESSEE CEMETERIES:</p>
         <ul>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/AndrewsCemWilliamsonCoTn/AndrewsCemListing.html"> Andrews Cemetery</a> (Franklin, Williamson Co Soccer complex)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/Crockett(Andrew)CemWilliamsonCoTn/CrockettCemListing.html">Crockett (Andrew) Cemetery</a> (<span class="revolutionary">Rev War Soldier Andrew Crockett</span>, Franklin, Wilson Pike &amp; Crockett Rd.)</li>
-            <li><a href="../Giles-Marshall-LincolnCountyCemWeb/OwenCemWilliamsonCoTn/OwenCemListing.html"> Owen Cemetery</a> (Franklin, Wilson Pike &amp; Crockett Rd.)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/AndrewsCemWilliamsonCoTn/AndrewsCemListing.html"> Andrews Cemetery</a> (Franklin, Williamson Co Soccer complex)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/Crockett(Andrew)CemWilliamsonCoTn/CrockettCemListing.html">Crockett (Andrew) Cemetery</a> (<span class="revolutionary">Rev War Soldier Andrew Crockett</span>, Franklin, Wilson Pike &amp; Crockett Rd.)</li>
+            <li><a href="Giles-Marshall-LincolnCountyCemWeb/OwenCemWilliamsonCoTn/OwenCemListing.html"> Owen Cemetery</a> (Franklin, Wilson Pike &amp; Crockett Rd.)</li>
             <li><a href="WadeCemWilliamsonCo/Wadecemlist.html">Wade Cemetery, Williamson Co.</a>, (25+ memorials - photographed complete)</li>
         </ul>
 
