--- a/NewRamieCemetery/052a.html
+++ b/NewRamieCemetery/052a.html
@@ -29,7 +29,7 @@ sister Mary Butler Lamar Brown, buried in New Ramie Cemetery Maury County
 Tennessee. This stone also mentions Reuben Ingram, died May 26, 1850 aged 85
 years. From this we pick up Mary's maiden name Butler and know she had a twin. I
 have that photo in the Elkridge Cemetery if anyone wishes to have a copy. Her
-twin sister <a href="../../Giles-Marshall-LincolnCountyCemWeb/ElkridgeCemetery/1113.html"><b>Malinda
+twin sister <a href="Giles-Marshall-LincolnCountyCemWeb/ElkridgeCemetery/1113.html"><b>Malinda
 Bulter Ingram Bray's</b></a> memorial in Elkridge Cemetery.</font><a href="mailto:marbles@texoma.net"></br>
 
 <i>Photos 5/30/2005 and publication by Wayne Austin May
