clean up index page

--- a/index.html
+++ b/index.html
@@ -9,37 +9,38 @@
 
     <body>
         <div class="top-headings">
-            <h1 class="blue-heading">Southern Middle Tennessee Cemeteries</h1>
-            <p class="red-heading">TOUR 700+ OF THE CEMETERIES IN MAURY, GILES, MARSHALL, LINCOLN, BEDFORD &amp; LEWIS COUNTIES OF TENNESSEE</p>
-            <p class="red-heading">INCLUDES A LINK TO 200+ NORTHERN ALABAMA CEMETERIES</p>
+            <h1>Southern Middle Tennessee Cemeteries</h1>
+            <h3>Tour 700+ Cemeteries in Southern Middle Tennessee</h3>
         </div>
 
-        <li><a href="zLinkeffort/IndexFullAccessFile.html">Lookup Index - Listing by Surname - index very incomplete due to continued growth of this site</a></li>
+        <h1 class="blue-heading">Cemeteries by County</h1>
+        <p class="red-heading"><a href="./bedford.html">Bedford</a></p>
+        <p class="red-heading"><a href="./coffee.html">Coffee</a></p>
+        <p class="red-heading"><a href="./franklin.html">Franklin</a></p>
+        <p class="red-heading"><a href="./giles.html">Giles</a></p>
+        <p class="red-heading"><a href="./hickman.html">Hickman</a></p>
+        <p class="red-heading"><a href="./lawrence.html">Lawrence</a></p>
+        <p class="red-heading"><a href="./lewis.html">Lewis</a></p>
+        <p class="red-heading"><a href="./lincoln.html">Lincoln</a></p>
+        <p class="red-heading"><a href="./giles.html">Marshall</a></p>
+        <p class="red-heading"><a href="./maury.html">Maury</a></p>
+        <p class="red-heading"><a href="./mcnairy.html">McNairy</a></p>
+        <p class="red-heading"><a href="./moore.html">Moore</a></p>
+        <p class="red-heading"><a href="./williamson.html">Williamson</a></p>
 
-        <h1 class="blue-heading">Tennessee Cemeteries</h1>
-        <p class="red-heading"><a href="./bedford.html">Bedford County</a></p>
-        <p class="red-heading"><a href="./coffee.html">Coffee County</a></p>
-        <p class="red-heading"><a href="./franklin.html">Franklin County</a></p>
-        <p class="red-heading"><a href="./giles.html">Giles County</a></p>
-        <p class="red-heading"><a href="./hickman.html">Hickman County</a></p>
-        <p class="red-heading"><a href="./lawrence.html">Lawrence County</a></p>
-        <p class="red-heading"><a href="./lewis.html">Lewis County</a></p>
-        <p class="red-heading"><a href="./lincoln.html">Lincoln County</a></p>
-        <p class="red-heading"><a href="./giles.html">Marshall County</a></p>
-        <p class="red-heading"><a href="./maury.html">Maury County</a></p>
-        <p class="red-heading"><a href="./mcnairy.html">McNairy County</a></p>
-        <p class="red-heading"><a href="./moore.html">Moore County</a></p>
-        <p class="red-heading"><a href="./williamson.html">Williamson County</a></p>
+        <h1 class="blue-heading">Cemeteries by Surname</h1>
+        <p class="red-heading"><a href="zLinkeffort/IndexFullAccessFile.html">Surname Lookup Index</a></p>
 
         <h2 class="blue-heading">Want to Help?</h2>
-        <p class="red-heading">If you have photos or transcribed cemetery listings from Maury, Giles, Lincoln, Marshall, Bedford or Lawrence County Tennessee that can be added to this site you may E-mail them to Wayne Austin <a
-                href="mailto:WayneAL1@AOL.com">WayneAL1@AOL.com</a> for posting here. We emphasize genealogy, cemetery preservation and history. <a href="purpose.html">Our Purpose</a></p>
+        <p class="red-heading">If you have photos or transcribed cemetery listings from Southern Middle Tennessee that can be added to this site, then please e-mail them to Wayne Austin at <a href="mailto:WayneAL1@AOL.com">WayneAL1@aol.com</a>.</p>
+        <p class="red-heading">We emphasize genealogy, cemetery preservation, and history. <a href="purpose.html">Our Purpose</a></p>
 
         <h2 class="blue-heading">Links</h2>
         <ul>
-            <li><a href="restoration/cemeteryrestoration.html">Practical Advice on maintaining &amp; Restoring Old Cemeteries </a></li>
-            <li><a href="../AlabamaCemeteriesWeb/index.html">GO TO THE NORTHERN ALABAMA CEMETERY WEB SITE</a></li>
-            <li><a href="linksindex.html">OTHER LINKS FOR CEMETERY INFORMATION</a></li>
+            <!-- TODO: add alabama site -->
+            <li><a href="../AlabamaCemeteriesWeb/index.html">Northern Alabama Cemeteries</a></li>
+            <li><a href="restoration/cemeteryrestoration.html">Maintaining and restoring old cemeteries</a></li>
+        </ul>
     </body>
 
 </html>
