make footer links large too

--- a/index.html
+++ b/index.html
@@ -36,11 +36,9 @@
         <p class="red-heading">We emphasize genealogy, cemetery preservation, and history. <a href="purpose.html">Our Purpose</a></p>
 
         <h1 class="blue-heading">Links</h1>
-        <ul>
-            <!-- TODO: add alabama site -->
-            <li><a href="../AlabamaCemeteriesWeb/index.html">Northern Alabama Cemeteries</a></li>
-            <li><a href="restoration/cemeteryrestoration.html">Maintaining and restoring old cemeteries</a></li>
-        </ul>
+        <!-- TODO: add alabama site -->
+        <p class="red-heading"><a href="../AlabamaCemeteriesWeb/index.html">Northern Alabama Cemeteries</a></p>
+        <p class="red-heading"><a href="restoration/cemeteryrestoration.html">Maintaining and restoring old cemeteries</a></p>
     </body>
 
 </html>
