clean up single page to test if aws uploads worked

--- a/Giles-Marshall-LincolnCountyCemWeb/Barrett-CarlisleCemBedfordCo/Barrett-CarlisleListing.html
+++ b/Giles-Marshall-LincolnCountyCemWeb/Barrett-CarlisleCemBedfordCo/Barrett-CarlisleListing.html
@@ -8,51 +8,51 @@
 
 <body>
 
-<p align="center"><b><font color="#800000" face="Comic Sans MS">BARRETT CARLISLE CEMETERY, 
+<p align="center"><b>BARRETT CARLISLE CEMETERY,
 Robinson Rd, BEDFORD COUNTY TENNESSEE<br>
-</font></b><img border="0" src="Barret1.jpg" width="622" height="415"><br>
-<font face="Comic Sans MS">
-<a href="Barrett-CarlisleCemMaps.htm">Mapping the Location&nbsp;</a></font></p>
-<p> <b><font face="Courier New" size="4">Photo overviews of the Cemetery: 
-<a href="IMG_8632.JPG">8632</a>/<a href="IMG_8633.JPG">8633</a>/<a href="IMG_8634.JPG">8634</a>/<a href="IMG_8635.JPG">8635</a>/<a href="IMG_8636.JPG">8636</a>/<a href="IMG_8637.JPG">8637</a>/<a href="IMG_8638.JPG">8638</a>/old 
-nearby home: <a href="IMG_8639.JPG">8639</a> <br>
+</b><img border="0" src="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/Barret1.jpg" width="622" height="415"><br>
+
+<a href="Barrett-CarlisleCemMaps.htm">Mapping the Location&nbsp;</a></p>
+<p> <b>Photo overviews of the Cemetery:
+<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8632.JPG">8632</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8633.JPG">8633</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8634.JPG">8634</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8635.JPG">8635</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8636.JPG">8636</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8637.JPG">8637</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8638.JPG">8638</a>/old
+nearby home: <a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8639.JPG">8639</a> <br>
 <br>
-BARRETT, John Barrett, 1796 - Nov 16, 1840, Age 46 years.***&nbsp;<a href="IMG_8616.JPG">8616</a><br>
-BARRETT, Barrett Child, Died Jul 5, 1841* <a href="BarrettChild.jpg">8640x</a><br>
-BARRETT, Frances &quot;Fannie&quot; Wilhoite,&nbsp; Jan 18, 1796 - Oct 9, 1846, Aged: 50y, 
-8m, 21d. (w/o John Barrett, d/o Jacob 1751 - 1821 &amp; Amelia Holt Wilhoite 
-1762 - 1821) <a href="IMG_8617.JPG">8617</a>/<a href="IMG_8618.JPG">8618</a><br>
-CARLISLE, William Carlisle, Jun 8, 1785&nbsp; - Feb 27, 1867, Aged: 81y, 8m, 19d. 
-**** <a href="IMG_8619.JPG">8619</a>/<a href="IMG_8620.JPG">8620</a>/<a href="IMG_8621.JPG">8621</a><br>
+BARRETT, John Barrett, 1796 - Nov 16, 1840, Age 46 years.***&nbsp;<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8616.JPG">8616</a><br>
+BARRETT, Barrett Child, Died Jul 5, 1841* <a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/BarrettChild.jpg">8640x</a><br>
+BARRETT, Frances &quot;Fannie&quot; Wilhoite,&nbsp; Jan 18, 1796 - Oct 9, 1846, Aged: 50y,
+8m, 21d. (w/o John Barrett, d/o Jacob 1751 - 1821 &amp; Amelia Holt Wilhoite
+1762 - 1821) <a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8617.JPG">8617</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8618.JPG">8618</a><br>
+CARLISLE, William Carlisle, Jun 8, 1785&nbsp; - Feb 27, 1867, Aged: 81y, 8m, 19d.
+**** <a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8619.JPG">8619</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8620.JPG">8620</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8621.JPG">8621</a><br>
 CARLISLE, Mary Carlisle, Nov 27, 1790 - May 16, 1869, Aged: 78y, 5m, 19d.
-<a href="IMG_8622.JPG">8622</a>/<a href="IMG_8623.JPG">8623</a><br>
-CARLISLE, James&nbsp; Nov 26, 1824 - Oct 2, 1881&nbsp; (h/o Elizabeth _ _ _ 
-Carlisle) <a href="IMG_8624.JPG">8624</a>/<a href="IMG_8626.JPG">8626</a>/<a href="IMG_8631.JPG">8631</a>/<a href="IMG_8632.JPG">8632</a><br>
-CARLISLE, Elizabeth Sep 2, 1830 - Aug 17, 1885&nbsp; marker by: F. J. Scholtz, Evansville Ind. 
-(w/o James Carlisle) <a href="IMG_8625.JPG">8625</a>/<a href="IMG_8627.JPG">8627</a>/<a href="IMG_8628.JPG">8628</a>/<a href="IMG_8629.JPG">8629</a>/<a href="IMG_8630.JPG">8630</a>/<a href="IMG_8631.JPG">8631</a>/<a href="IMG_8632.JPG">8632</a></font></b></p>
-<p><b><font face="Courier New" size="4">Appears to be a child's grave - A few stacked stones - tumbled:
-<a href="IMG_8615.JPG">8615</a><br>
-Adult grave - stacked stones. Next to Frances Barrett. Is this the grave of John 
+<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8622.JPG">8622</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8623.JPG">8623</a><br>
+CARLISLE, James&nbsp; Nov 26, 1824 - Oct 2, 1881&nbsp; (h/o Elizabeth _ _ _
+Carlisle) <a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8624.JPG">8624</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8626.JPG">8626</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8631.JPG">8631</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8632.JPG">8632</a><br>
+CARLISLE, Elizabeth Sep 2, 1830 - Aug 17, 1885&nbsp; marker by: F. J. Scholtz, Evansville Ind.
+(w/o James Carlisle) <a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8625.JPG">8625</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8627.JPG">8627</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8628.JPG">8628</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8629.JPG">8629</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8630.JPG">8630</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8631.JPG">8631</a>/<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8632.JPG">8632</a></b></p>
+<p><b>Appears to be a child's grave - A few stacked stones - tumbled:
+<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8615.JPG">8615</a><br>
+Adult grave - stacked stones. Next to Frances Barrett. Is this the grave of John
 Barrett. Is his marked stone still there buried under the rubble.
-<a href="IMG_8616.JPG">8616</a><br>
-* This might actually be the footstone for Mary Carlisle. Someone recently moved 
-it over to the foot of her tomb. 
-<a href="BarrettChild.jpg">8640x</a><br>
+<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/IMG_8616.JPG">8616</a><br>
+* This might actually be the footstone for Mary Carlisle. Someone recently moved
+it over to the foot of her tomb.
+<a href="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/Barrett-CarlisleCemBedfordCo/BarrettChild.jpg">8640x</a><br>
 <br>
-Spelling of Carlisle&nbsp;(&quot;s&quot; is silent) is all over the place so I will use 
+Spelling of Carlisle&nbsp;(&quot;s&quot; is silent) is all over the place so I will use
 the most common spelling &quot;Carlisle&quot; for all of the above.<br>
-How are these Barretts' connected to the Barretts' in the Center Hill Church 
-Cemetery?</font></b></p>
-<p>&nbsp;<i><span style="font-size: 13.5pt; font-family: Courier New; color: #003300">Photographed 
-on 4th Nov 2016. The inscriptions were corrected/updated with exceptions found 
-or known by C. Wayne Austin. This publication culminated from various sources. 
-First it was shown on page 183 in the book Bedford County Tennessee Cemeteries 
-by Tim &amp; Helen Marsh in the 1970s.Findagrave left off James &amp; Elizabeth but I 
+How are these Barretts' connected to the Barretts' in the Center Hill Church
+Cemetery?</b></p>
+<p>&nbsp;<i><span style="font-size: 13.5pt; font-family: Courier New; color: #003300">Photographed
+on 4th Nov 2016. The inscriptions were corrected/updated with exceptions found
+or known by C. Wayne Austin. This publication culminated from various sources.
+First it was shown on page 183 in the book Bedford County Tennessee Cemeteries
+by Tim &amp; Helen Marsh in the 1970s.Findagrave left off James &amp; Elizabeth but I
 added them.</span></i></p>
 <p align="center" style="text-align: center"><b><a href="../../cemetery/index.html"><span
 style='font-size:13.5pt;font-family:"Courier New";color:navy;text-decoration:
 none;text-underline:none'><img border=0 width=81 height=43 id="_x0000_i1025"
-src="../1buttontornad.jpg" font></span></a></b></p>
+src="https://smtc-website.s3.us-east-2.amazonaws.com/Giles-Marshall-LincolnCountyCemWebImages/1buttontornad.jpg" font></span></a></b></p>
 
 </body>
 
